--- a/mean-app/angular.json
+++ b/mean-app/angular.json
@@ -31,7 +31,7 @@
               "src/styles.scss",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               {
-                "input": "node_modules\\@angular\\material\\prebuilt-themes\\deeppurple-amber.css"
+                "input": "node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css"
               }
 
             ],
