--- a/mean-app/angular.json
+++ b/mean-app/angular.json
@@ -30,12 +30,15 @@
             "styles": [
               "src/styles.scss",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/font-awesome/css/font-awesome.css",
               {
                 "input": "node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css"
               }
 
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/jquery/dist/jquery.min.js"
+            ]
           },
           "configurations": {
             "production": {
