--- a/mean-app/angular.json
+++ b/mean-app/angular.json
@@ -31,6 +31,7 @@
               "src/styles.scss",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/font-awesome/css/font-awesome.css",
+              "node_modules/@fortawesome/fontawesome-free/css/all.css",
               {
                 "input": "node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css"
               }
