--- a/mean-app/package.json
+++ b/mean-app/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --port 4100",
+    "start": "ng serve --host 10.10.7.163 --port 4100",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
